[STYLE] Fixed vertical-align on icons

--- a/client/app/sass/dropdown.scss
+++ b/client/app/sass/dropdown.scss
@@ -18,7 +18,7 @@
 
     i {
         float: left;
-        padding-right: 10px;
+        padding: 5px 10px 0 0;
     }
 
     a {
